data preparation has been completed

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -2,7 +2,7 @@ artifacts:
   ARTIFACTS_DIR: artifacts 
   PREPARED_DATA: prepared
   TRAIN_DATA: train.tsv
-  TEST_DATA: test.csv
+  TEST_DATA: test.tsv
   FEATURIZED_DATA: features
   FEATURIZED_DATA_TRAIN: train.pkl
   FEATURIZE_DATA_TEST: test.pkl
