--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -5,7 +5,7 @@ artifacts:
   TEST_DATA: test.tsv
   FEATURIZED_DATA: features
   FEATURIZED_DATA_TRAIN: train.pkl
-  FEATURIZE_DATA_TEST: test.pkl
+  FEATURIZED_DATA_TEST: test.pkl
   MODEL_DIR: model 
   MODEL_NAME: model.pkl
 metrics: 
