--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,4 +68,4 @@ plugins:
   - search
 
 copyright: |
-  &copy; 2022 <a href="https://github.com/TUCchkul"  target="_blank" rel="noopener">Kulakirti Chakma</a>
+  &copy; 2022 <a href="https://github.com/TUCchkul"  target="_blank" rel="noopener">K C</a>
